--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 
 <title>Verify ID</title>
 
+
+
 <body>
 
+    
 
-
-<img src="image1.jpg" alt="picture1" width="500">
+   <h1 style="text: gray ">SOSIA-ONLINE LESP</h1>
+   
 
 </body>
+
+
 </html>
