--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html>
 
-<title>Verify ID</title>
+<head>
 
 
 
-<body>
-
+    <title>SOSIA.PNP-CSG.ORG</title>
+<head>
     
-
-   <h1 style="text: gray ">SOSIA-ONLINE LESP</h1>
-   
-
 </body>
-
+	<script>window.location.replace("https://sosia.pnp-csg.org");</script>
 
 </html>
